remote/argocd/ci-runners/daedalus-fab/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: arc-runners-daedalus
  labels:
    app.kubernetes.io/part-of: daedalus-ci
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
